# dvdns

./: .gitignore  .travis.yml  BIG_FAT_WARNING  Makefile  Makefile.am  NEWS  README  TODO  backend.c  configure.ac  dns.c  dnsd.h  dnsdb-data.sql  import-zone.pl  main.c  mk-dnsdb.sql  socket.c
m4/: Makefile.am
test/: .gitignore  Makefile.am  basic-rr  daemon-running  example.com.zone  it-works  pid-exists  prep-db  start-daemon  stop-daemon  yyz.us
