
EXTRA_DIST =			\
	example.com.zone	\
	prep-db			\
	start-daemon		\
	pid-exists		\
	daemon-running		\
	it-works		\
	basic-rr		\
	stop-daemon

TESTS =				\
	prep-db			\
	start-daemon		\
	pid-exists		\
	daemon-running		\
	it-works		\
	basic-rr		\
	stop-daemon

DISTCLEANFILES=test.db

TESTS_ENVIRONMENT=top_srcdir=$(top_srcdir)
